--- a/src/app/components/blog/blog-listing/blog-listing.component.html
+++ b/src/app/components/blog/blog-listing/blog-listing.component.html
@@ -1,5 +1,3 @@
-<!-- <app-navbar [bgColor]="bgColor"></app-navbar> -->
-
 <ng-container *ngIf="blogList.length != 0 ;
 else spinner">
 
@@ -8,7 +6,10 @@ else spinner">
       <h2 class="blog__title">Blog</h2>
       <p class="blog__par">Our latest web design tips, tricks, insights, and resources, hot off the presses.</p>
       <div class="blog__list row justify-content-center align-items-center">
-        <div class="col-lg-4 col-md-6 col-10" *ngFor="let blog of blogList">
+        <div class="col-lg-4 col-md-6 col-10" *ngFor="let blog of blogList | paginate:{
+          itemsPerPage: tableSize,
+          currentPage: page,
+          totalItems:count}; let i = index">
           <div class="blog__card" (click)="goToBlogDetails(blog)">
             <img class="blog__img" src={{blog.blogImg}}>
             <div class="blog__card__content">
@@ -23,6 +24,11 @@ else spinner">
             </div>
           </div>
         </div>
+      </div>
+      <div>
+
+        <pagination-controls class="text-center" (pageChange)="page = $event"></pagination-controls>
+
       </div>
     </div>
   </div>
