--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="footer pt-5">
   <div class="container row mx-auto pb-5">
-    <div class="col-lg-3 col-sm-6 col-8">
+    <div class="col-lg-3 col-sm-6 col-8 ps-0">
       <p class="footer__title brand">team<span>.</span></p>
       <p class="footer__list">
         Collaboration platform
@@ -37,7 +37,7 @@
         </li>
       </ul>
     </div>
-    <div class="col-lg-3 col-sm-6 col-8">
+    <div class="col-lg-3 col-sm-6 col-8 pe-0">
       <p class="footer__title">Stay up to date</p>
       <p class="footer__list">Subscribe to our newsletter</p>
       <form class="footer__form">
