--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,7 @@
 <section class="home">
-    <app-home-header></app-home-header>
-
-    <app-testimonials></app-testimonials>
+  <app-home-header></app-home-header>
+  <app-hub-section></app-hub-section>
+  <app-task-mangage-sys></app-task-mangage-sys>
+  <app-scheduling></app-scheduling>
+  <app-testimonials></app-testimonials>
 </section>
