--- a/src/app/components/blog/blog-listing/blog-listing.component.html
+++ b/src/app/components/blog/blog-listing/blog-listing.component.html
@@ -10,18 +10,8 @@ else spinner">
           itemsPerPage: tableSize,
           currentPage: page,
           totalItems:count}; let i = index">
-          <div class="blog__card" (click)="goToBlogDetails(blog)">
-            <img class="blog__img" src={{blog.blogImg}}>
-            <div class="blog__card__content">
-              <h3 class="blog__card__title">{{blog.title}}</h3>
-              <p class="blog__card__body">{{blog.body}}</p>
-              <div class="blog__info">
-                <img src={{blog.authorImg1}}>
-                <p>{{blog.authorName}}</p>
-                <p>|</p>
-                <p>{{blog.date}}</p>
-              </div>
-            </div>
+          <div (click)="goToBlogDetails(blog)">
+            <app-blog-card [blog]="blog"></app-blog-card>
           </div>
         </div>
       </div>
