--- a/src/app/components/home/testimonials/testimonials.component.html
+++ b/src/app/components/home/testimonials/testimonials.component.html
@@ -1,5 +1,5 @@
 <div class="testimonials">
-  <div class="container">
+  <div class="container-left">
     <h3 class="testimonials__heading">What people say about Team</h3>
     <owl-carousel-o [options]="customOptions" class="testimonials__carousel">
       <ng-template carouselSlide *ngFor="let person of people">
