--- a/src/app/components/home/scheduling/scheduling.component.scss
+++ b/src/app/components/home/scheduling/scheduling.component.scss
@@ -2,7 +2,7 @@
     padding-top: 10rem;
 
     &__heading {
-        font-size: 55px;
+        font-size: 3.4375rem;
         color: #324162;
         font-weight: 400;
         margin-bottom: 2rem;
