responsive for blog lists and blog details displays

--- a/src/app/components/home/scheduling/scheduling.component.scss
+++ b/src/app/components/home/scheduling/scheduling.component.scss
@@ -14,3 +14,15 @@
         margin-bottom: 2rem;
     }
 }
+
+
+@media screen and (max-width: 768px) {
+    .row {
+        justify-content: center !important;
+    }
+
+    .more {
+        display: inline-block;
+        margin-bottom: 2rem;
+    }
+}
