--- a/src/app/components/blog/blog-listing/blog-card/blog-card.component.scss
+++ b/src/app/components/blog/blog-listing/blog-card/blog-card.component.scss
@@ -4,7 +4,7 @@
     padding: 0;
     height: 500px;
     position: relative;
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
     background-color: white;
     cursor: pointer;
 
@@ -35,6 +35,7 @@
       box-shadow: 0px 0px 20px rgba(66, 66, 66, 0.302);
     }
   }
+
   &__info {
     color: #697694;
     font-size: 12px;
@@ -51,6 +52,44 @@
     img {
       width: auto;
       height: auto;
+    }
+  }
+}
+
+@media screen and (max-width: 1110px) {
+  .blog {
+    &__card {
+      &__content {
+        width: 90%;
+      }
+    }
+
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .blog {
+    &__card {
+      &__content {
+        width: 80%;
+      }
+    }
+
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .blog {
+    &__card {
+      height: 450px;
+
+      &__content {
+        width: 90%;
+      }
+    }
+
+    &__info {
+      gap: 5px;
     }
   }
 }
