--- a/src/app/components/blog/blog-listing/blog-listing.component.html
+++ b/src/app/components/blog/blog-listing/blog-listing.component.html
@@ -6,7 +6,7 @@ else spinner">
       <h2 class="blog__title">Blog</h2>
       <p class="blog__par">Our latest web design tips, tricks, insights, and resources, hot off the presses.</p>
       <div class="blog__list row justify-content-center align-items-center">
-        <div class="col-lg-4 col-md-6 col-10" *ngFor="let blog of blogList | paginate:{
+        <div class="col-lg-4 col-md-6 col-sm-10 col-12" *ngFor="let blog of blogList | paginate:{
           itemsPerPage: tableSize,
           currentPage: page,
           totalItems:count}; let i = index">
