--- a/src/app/components/home/hub-section/hub-section.component.html
+++ b/src/app/components/home/hub-section/hub-section.component.html
@@ -1,7 +1,7 @@
 <section class="hub">
   <div class="container-left">
     <div class="row justify-content-between align-items-center">
-      <div class="col-lg-4 col-md-6 col-sm-8 col-12">
+      <div class="col-lg-4 col-md-6 col-12">
         <h3 class="hub__heading">Your hub for teamwork</h3>
         <p class="hub__body">
           Project discussions, important documents, free food announcements: they all live tidily together in Team. With
@@ -14,7 +14,7 @@
         </span>
 
       </div>
-      <div class="col-lg-6 col-md-6 col-sm-12 col-12">
+      <div class="col-lg-6 col-md-6 col-12">
         <img class="w-100" src="../../../../assets/dashboard.png" alt="dashboard">
       </div>
     </div>
