--- a/src/app/components/home/scheduling/scheduling.component.html
+++ b/src/app/components/home/scheduling/scheduling.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row justify-content-between align-items-center">
 
-            <div class="col-lg-5 col-md-6 col-sm-8 col-12">
+            <div class="col-lg-5 col-md-6 col-12">
                 <h3 class="schedule__heading">Scheduling that actually works</h3>
                 <p class="schedule__body">
                     Integrated a Team calendar with your favorite calendar app, be it Google Calendar or iCal.
@@ -17,7 +17,7 @@
                 </span>
 
             </div>
-            <div class="col-lg-6 col-md-6 col-sm-8 col-12">
+            <div class="col-lg-6 col-md-6 col-12">
                 <img class="w-100" src="../../../../assets/brooke-cagle-1181670-unsplash.png" alt="dashboard">
             </div>
         </div>
