--- a/src/app/components/home/task-mangage-sys/task-mangage-sys.component.html
+++ b/src/app/components/home/task-mangage-sys/task-mangage-sys.component.html
@@ -1,10 +1,11 @@
 <section class="management">
     <div class="container">
         <div class="row justify-content-between align-items-center">
-            <div class="col-lg-6 col-md-6 col-sm-8 col-12">
-                <img class="w-100" src="../../../../assets/brooke-cagle-1181673-unsplash.png" alt="dashboard">
+            <div class="col-lg-6 col-md-6 col-12">
+                <img class="management__img w-100" src="../../../../assets/brooke-cagle-1181673-unsplash.png"
+                    alt="dashboard">
             </div>
-            <div class="col-lg-5 col-md-6 col-sm-8 col-12">
+            <div class="col-lg-5 col-md-6 col-12">
                 <h3 class="management__heading">Simplest task management</h3>
                 <p class="management__body">
                     Task management with Team is as simple as it gets. No complicated layout and need for user training.
