--- a/src/app/components/home/home-header/home-header.component.html
+++ b/src/app/components/home/home-header/home-header.component.html
@@ -6,10 +6,10 @@
       <p class="header__body pt-3 pb-5">All-in-one place for your remote team to chat, collaborate and track project
         progress.</p>
       <div class="row justify-content-between">
-        <div class="col-8">
+        <div class="col-sm-8 col">
           <input type="text" class="form-control" placeholder="Your email">
         </div>
-        <button class="btn col-4">Get Early Access</button>
+        <button class="btn col-sm-4 col-4">Get Early Access</button>
       </div>
     </div>
   </div>
