--- a/src/app/components/home/testimonials/testimonials.component.scss
+++ b/src/app/components/home/testimonials/testimonials.component.scss
@@ -2,7 +2,7 @@
   padding: 10rem 0;
 
   &__heading {
-    font-size: 55px;
+    font-size: 3.4375rem;
     color: #324162;
     padding-bottom: 5rem;
     font-weight: 400;
