--- a/src/styles.scss
+++ b/src/styles.scss
@@ -105,31 +105,38 @@ body {
 
 @media screen and (min-width:800px) {
   .owl-stage {
-    left: -80px;
+    left: -70px;
   }
 }
 
 @media screen and (max-width: 1600px) {
   .owl-next {
-    margin-right: 8.2rem !important;
+    margin-right: 8rem !important;
   }
 }
 
-@media screen and (max-width: 1180px) {
+@media screen and (max-width: 1400px) {
+  .owl-next {
+    margin-right: 7.5rem !important;
+  }
+}
+
+@media screen and (max-width: 1200px) {
   .owl-next {
     margin-right: 6.8rem !important;
   }
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 1000px) {
   :root {
     font-size: 14px;
   }
 
   .owl-next {
-    margin-right: 4.5rem !important;
+    margin-right: 5.8rem !important;
   }
 }
+
 
 @media screen and (max-width: 768px) {
   :root {
@@ -145,4 +152,11 @@ body {
   .owl-next {
     margin-right: -0.5rem !important;
   }
+}
+
+@media screen and (max-width: 575px) {
+  :root {
+    font-size: 12px;
+  }
+
 }
